src/bootstrap/src/core/builder/selectors/snapshots/x_check_compiler.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: check compiler
---
[Check] check::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::compiler})
    - Set({check::compiler/rustc})
    - Set({check::compiler/rustc_abi})
    - Set({check::compiler/rustc_arena})
    - Set({check::compiler/rustc_ast})
    - Set({check::compiler/rustc_ast_ir})
    - Set({check::compiler/rustc_ast_lowering})
    - Set({check::compiler/rustc_ast_passes})
    - Set({check::compiler/rustc_ast_pretty})
    - Set({check::compiler/rustc_attr_parsing})
    - Set({check::compiler/rustc_baked_icu_data})
    - Set({check::compiler/rustc_borrowck})
    - Set({check::compiler/rustc_builtin_macros})
    - Set({check::compiler/rustc_codegen_llvm})
    - Set({check::compiler/rustc_codegen_ssa})
    - Set({check::compiler/rustc_const_eval})
    - Set({check::compiler/rustc_data_structures})
    - Set({check::compiler/rustc_driver})
    - Set({check::compiler/rustc_driver_impl})
    - Set({check::compiler/rustc_error_codes})
    - Set({check::compiler/rustc_error_messages})
    - Set({check::compiler/rustc_errors})
    - Set({check::compiler/rustc_expand})
    - Set({check::compiler/rustc_feature})
    - Set({check::compiler/rustc_fluent_macro})
    - Set({check::compiler/rustc_fs_util})
    - Set({check::compiler/rustc_graphviz})
    - Set({check::compiler/rustc_hashes})
    - Set({check::compiler/rustc_hir})
    - Set({check::compiler/rustc_hir_analysis})
    - Set({check::compiler/rustc_hir_id})
    - Set({check::compiler/rustc_hir_pretty})
    - Set({check::compiler/rustc_hir_typeck})
    - Set({check::compiler/rustc_incremental})
    - Set({check::compiler/rustc_index})
    - Set({check::compiler/rustc_index_macros})
    - Set({check::compiler/rustc_infer})
    - Set({check::compiler/rustc_interface})
    - Set({check::compiler/rustc_lexer})
    - Set({check::compiler/rustc_lint})
    - Set({check::compiler/rustc_lint_defs})
    - Set({check::compiler/rustc_llvm})
    - Set({check::compiler/rustc_log})
    - Set({check::compiler/rustc_macros})
    - Set({check::compiler/rustc_metadata})
    - Set({check::compiler/rustc_middle})
    - Set({check::compiler/rustc_mir_build})
    - Set({check::compiler/rustc_mir_dataflow})
    - Set({check::compiler/rustc_mir_transform})
    - Set({check::compiler/rustc_monomorphize})
    - Set({check::compiler/rustc_next_trait_solver})
    - Set({check::compiler/rustc_parse})
    - Set({check::compiler/rustc_parse_format})
    - Set({check::compiler/rustc_passes})
    - Set({check::compiler/rustc_pattern_analysis})
    - Set({check::compiler/rustc_privacy})
    - Set({check::compiler/rustc_proc_macro})
    - Set({check::compiler/rustc_public})
    - Set({check::compiler/rustc_public_bridge})
    - Set({check::compiler/rustc_query_impl})
    - Set({check::compiler/rustc_query_system})
    - Set({check::compiler/rustc_resolve})
    - Set({check::compiler/rustc_sanitizers})
    - Set({check::compiler/rustc_serialize})
    - Set({check::compiler/rustc_session})
    - Set({check::compiler/rustc_span})
    - Set({check::compiler/rustc_symbol_mangling})
    - Set({check::compiler/rustc_target})
    - Set({check::compiler/rustc_thread_pool})
    - Set({check::compiler/rustc_trait_selection})
    - Set({check::compiler/rustc_traits})
    - Set({check::compiler/rustc_transmute})
    - Set({check::compiler/rustc_ty_utils})
    - Set({check::compiler/rustc_type_ir})
    - Set({check::compiler/rustc_type_ir_macros})
    - Set({check::compiler/rustc_windows_rc})
