src/bootstrap/src/core/builder/selectors/snapshots/x_check_compiletest.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: check compiletest
---
[Check] check::Compiletest
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/compiletest})
