src/bootstrap/src/core/builder/selectors/snapshots/x_check_rustc.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: check rustc
---
[Check] check::Rustc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::compiler/rustc})
