src/bootstrap/src/core/builder/selectors/snapshots/x_check_rustdoc.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: check rustdoc
---
[Check] check::Rustdoc
    targets: [x86_64-unknown-linux-gnu]
    - Set({check::src/tools/rustdoc})
