src/bootstrap/src/core/builder/selectors/snapshots/x_clean.snap
---
source: src/bootstrap/src/core/builder/selectors/tests.rs
expression: clean
---
[Clean] clean::CleanAll
    targets: [aarch64-unknown-linux-gnu]
    - Set({})
